# ChangeLog for x11-themes/elementary-icon-theme
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Oct 2010; Rion <rion4ik@notagmail.com>
  -elementary-icon-theme-2.4.ebuild, +elementary-icon-theme-2.5.ebuild:
  new version

  14 Oct 2010; Rion <rion4ik@notagmail.com>
  elementary-icon-theme-2.4.ebuild:
  changed home dir and download location, changed EAPI

  10 May 2010; Rion <rion4ik@gmail.com> -elementary-icon-theme-2.3.ebuild,
  +elementary-icon-theme-2.4.ebuild:
  new version

  15 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  elementary-icon-theme-2.3.ebuild:
  drop untested keywords

*elementary-icon-theme-2.1-r1 (06 Aug 2009)

  06 Aug 2009; Rion <rion4ik@gmail.com> +elementary-icon-theme-2.1-r1.ebuild:
  more correct installation procedure, EAPI=2