@@ -1,5 +1,7 @@
 DIST elementary-icon-theme-2.5.tar.gz 3576879 RMD160 1d99aa6779764db29af86001ef0245d5a8c8ea1f SHA1 e6ea0cb4e4e8a13d73f06b4098c015c73575e311 SHA256 7c78706e4e37778952cf1cb3d528fd41007a3ae17fa424dd2008a719be05ef8a
+DIST elementary-icon-theme-2.6.tar.gz 3820775 RMD160 93e1ec4554a67f51435d5b82cf70e524d9dc51c2 SHA1 a3c91be5fe0a44f849402e9008b0bda03d0953ef SHA256 81abfb56ea1de98146d9d5fa4b6e827f0783acdbc60584a2c27f3c48450d4a0d
 DIST elementary-icon-theme-mono-dark-2.5.tar.gz 136621 RMD160 82152307f7ed6f52b107fe1d0bcf11f5330c43d9 SHA1 dea292ec28b0fb2aa839bb83aa69bfb1a8ff9c40 SHA256 2a45a1932506ba21c13e491b04c246920496e85175b0c9727e178e7eaf1fa387
 EBUILD elementary-icon-theme-2.5.ebuild 857 RMD160 ad9a451a1d357c16e49591c5b1cd60c72c499327 SHA1 3efff171f321ad169948965e4ccaf67eac958e15 SHA256 43e1c2228f7efbf20fb3449948351539cb9a321a09de1619ed62065c7abf801b
-MISC ChangeLog 811 RMD160 c95252cf00592b31257f17c82b02b09e4cc7c87c SHA1 7d968dd68f4f25c7dac56eef26c9cc38b4e1b97a SHA256 a01fa87de4173dc212fbca317160bda04e1bb86c11a8366de183f2de18409566
+EBUILD elementary-icon-theme-2.6.ebuild 843 RMD160 12063a1719a62695e59377a89aa0cb5e29d5f315 SHA1 3930f76ba3307f7c587f8b61a7cb06f4ff802040 SHA256 5d87ba77317ad7a02bcfb4e7ace5af8a921d1951dad216d8c64c924c57e13cfc
+MISC ChangeLog 972 RMD160 44ed0173148a6f3e996d2d0d8cd7c178c72aab15 SHA1 019d70d9d3c6956326ff23fec6265590afad8ef8 SHA256 251acf0d2182eb6d9687504c4a633a7b71d61a0b135c2b8de558aa43a19228a6
 MISC metadata.xml 316 RMD160 c63b2f5f12c402257507f293ffafde28f8d84ab2 SHA1 5cd8ea5c795d0046ed702109f7d5c6e17cd79087 SHA256 0f9304f51583721309a641d56ba6192427a6d27f822b03e0a29ec64983ae0541
